--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ h3 {
   grid-gap: 20px;
 }
 
+
 .hero_title {
   display: flex;
   flex-direction: column;
@@ -172,6 +173,7 @@ h5 {
 
   .hero_about {
     text-align: center;
+    margin-right: 45px;
   }
 
   .hero_links {
